@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.2.6 to v2.4.0
+- emulate reject overflows and spechit overflows - from prboom-plus
 - fix compilation with gcc 4.x
 - fix some more dehacked support problems (e.g. Hacx)
 - fix crash if pwad contains zero-length sound lumps
